--- a/app/assets/stylesheets/materialize_custome.scss
+++ b/app/assets/stylesheets/materialize_custome.scss
@@ -13,6 +13,9 @@
     h5 {
       margin-bottom: 3rem;
     }
+    p {
+      font-size: 1rem;
+    }
   }
   .modal-footer {
     padding-right: 1.5rem;
