--- a/app/views/_header.html.haml
+++ b/app/views/_header.html.haml
@@ -49,9 +49,10 @@
 
   $(function(){
 
-    $('.modal').modal();
+    $('#help-modal').modal();
 
     $('#help-btn').on('click', function() {
+      $('#help-modal').modal('open');
       showHelpList();
     });
 
