--- a/app/assets/stylesheets/toolbar.scss
+++ b/app/assets/stylesheets/toolbar.scss
@@ -17,6 +17,7 @@ $toolbar_button_height: 30px;
   }
   .selection-info {
     position: absolute;
+    display: block;
     margin-top: 8px;
     padding-left: 20px;
     font-size: 12px;
