FEATURE #70788 - Use Roboto as default font

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -5,7 +5,7 @@ $margin: 10px;
 
 body {
   background: $background_color;
-  font-family: "Helvetica", "Arial", sans-serif;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   font-size: 62.5%;
   margin: 0;
 }
