--- a/app/assets/stylesheets/jquery-ui-1.8.5.custom.scss
+++ b/app/assets/stylesheets/jquery-ui-1.8.5.custom.scss
@@ -61,10 +61,10 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget { font-family: Helvetica, Arial, sans-serif; outline: none;}
+.ui-widget { font-family: "Roboto", Helvetica, Arial, sans-serif; outline: none;}
 .ui-widget a { outline: none; }
 .ui-widget .ui-widget { font-size: 1em; }
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Helvetica, Arial, sans-serif; font-size: 1em; }
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: "Roboto", Helvetica, Arial, sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #dddddd; color: #333333; background: #FFFFFF; }
 .ui-widget-content a { color: #333333; }
 .ui-widget-header { border: 1px solid #8ab0c6; background: #a7cfe6; color: #ffffff; font-weight: bold; }
