BUG - Make header's shadow effect works correctly

--- a/app/assets/stylesheets/toolbar.scss
+++ b/app/assets/stylesheets/toolbar.scss
@@ -85,7 +85,7 @@ $toolbar_button_height: 30px;
 }
 
 .grid-header.multi-selected {
-  background-color: #E3F2FD;
+  background-color: rgba(0, 192, 212, 0.1);
 }
 
 .toolbar_icon_disabled {
