--- a/app/assets/stylesheets/grid_form.scss
+++ b/app/assets/stylesheets/grid_form.scss
@@ -1,18 +1,29 @@
 @import "base";
 
-.create_form {
-  .title {
-    padding-top: 1em;
-    padding-bottom: 1em;
-    margin-top: 0;
-  }
-  .field {
-    padding: 1em 0 1em 0;
-    margin: 0;
-  }
-  .submit {
-    float: right;
-    padding-bottom: 2em;
+.modal-content {
+  .create_form {
+    padding: 0 2rem;
+    .title {
+      padding-top: 1em;
+      padding-bottom: 1em;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+    .field {
+      // padding: 1em 0 1em 0;
+      margin: 0;
+      .chzn-container {
+        top: 2.5rem;
+        margin-bottom: 1rem;
+      }
+      input[type=text]:not(.browser-default) {
+        margin-bottom: 0.5rem;
+      }
+    }
+    .submit {
+      float: right;
+      padding: 3em 0;
+    }
   }
 }
 
