FEATURE #70954 - MD Implementation: Edit Form

--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -114,7 +114,7 @@
         %input.btn.modal-close{:id => "#{grid.name}_submit", :name => "commit", :type => "submit", :value => " Create "}/
         %input.btn{:id => "#{grid.name}_submit_continue", :name => "commit", :type => "submit", :value => " Create and Continue "}/
       - else
-        %input.btn.modal-close.update_btn{:id => "#{grid.name}_batch_update", :name => "commit", :type => "submit", :value => "  Update  "}/
+        %input.btn.update_btn{:id => "#{grid.name}_batch_update", :name => "commit", :type => "submit", :value => "  Update  "}/
 
 :javascript
   $('##{grid.name}_form select[data-required="true"]').chosen();
