--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -6,26 +6,10 @@ $margin: 10px;
 body {
   background: $background_color;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  font-size: 62.5%;
   margin: 0;
 }
 
-h1 {
-  font-size: 16px;
-  font-weight: bold;
-  color: #555555;
-  display: block;
-  padding-left: $margin;
-  @include text-shadow(#efefef 1px 1px 0);
-}
-
-.grid_container {
-  float: left;
-  width: 100%;
-  .pager {
-    height: 27px;
-  }
-}
+// Screen Container
 
 #content {
   position: absolute;
@@ -34,24 +18,6 @@ h1 {
   bottom: 0;
   right: 0;
   text-align: center;
-}
-
-#screen_content_loader_container {
-  margin-left: 45%;
-}
-
-#screen_content_loader {
-  border: 8px solid #f3f3f3; /* Light grey */
-  border-top: 8px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
 }
 
 #screen_content {
@@ -63,18 +29,27 @@ h1 {
   position: relative;
 }
 
-h2 {
-  margin: 0 0 10px 0;
-  font-weight: bold;
-  font-size: 1.5em;
+// Screen Loader
+
+#screen_content_loader_container {
+  margin-left: 45%;
 }
 
-.grid-header {
-  background: rgba(255, 255, 255, 0.1);
-  h2 {
-    margin-top: 7px;
-  }
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
+
+#screen_content_loader {
+  border: 8px solid #f3f3f3; /* Light grey */
+  border-top: 8px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+// Form
 
 form {
   .field_error {
@@ -84,13 +59,14 @@ form {
     margin-left: 5px;
     max-width: 85px;
   }
-
   .base_error {
     padding-left: 130px;
     line-height: 30px;
     color: red;
   }
 }
+
+// Confirm & Error Modal
 
 .modal.info-modal {
   width: 400px;
