BUG #71021 - Make edit_forms works
- add processing to select columns in form partial to deal with edit_forms

--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -1,6 +1,9 @@
 :ruby
   model_name = grid.model.model_name.singular
   columns = grid.columns.dup.delete_if {|x| x.name.to_s == 'id' }
+  if params[:update_version].present? and (version_columns = grid.find_columns_by_version(params[:update_version])).present?
+    columns.select!{|x| version_columns.include?(x.name)}
+  end
   datepicker_str = ''
   object = grid.model.new
   is_new = params["action"] === 'wulin_master_new_form'
