--- a/app/assets/stylesheets/grid_states.scss
+++ b/app/assets/stylesheets/grid_states.scss
@@ -1,4 +1,4 @@
-.grid_states_switcher {
+.grid-states-switcher {
   float: left;
   margin-left: 30px;
   padding-top: 10px;
@@ -28,57 +28,6 @@
   }
 }
 
-#create-modal,#edit-modal {
+.grid-states-modal {
   width: 35rem;
-  .input-field {
-    margin-top: 1.5rem;
-  }
-  .modal-close {
-    margin-right: 1rem;
-  }
-  .modal-footer {
-    padding-right: 1.7rem;
-  }
 }
-
-// .grid_states_switcher {
-//   min-width: 250px;
-//   float: left;
-//   font-size: 14px;
-//   margin-left: 30px;
-//   padding-top: 15px;
-//   select {
-//     width: 120px;
-//   }
-//   a.manage, a.reset {
-//     height: 20px;
-//     width: 20px;
-//     display: inline-block;
-//     vertical-align: middle;
-//   }
-//   a.reset { margin-left: 5px; }
-// }
-//
-// .states_manage_form {
-//   background-color: #EDEDED !important;
-//   form {
-//     padding-top: 20px;
-//     padding-left: 40px;
-//     .state_field {
-//       padding: 5px 0;
-//     }
-//     input[type="text"] {
-//       padding: 3px 2px;
-//     }
-//     .state_submit {
-//       margin-left: 55px;
-//       margin-top: 10px;
-//     }
-//     .error_message {
-//       color: red;
-//       padding-left: 55px;
-//       margin-top: 5px;
-//       display: block;
-//     }
-//   }
-// }
