REFACTOR #70955 - Clean up menu.scss

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+#menu-toggle {
+  padding-left: 20px;
+}
+
 #notification-list {
   width: 30rem !important;
   top: 3.2rem !important;
