BUG #71178 - Fix the attach(add_detail) feature for detailed grid

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -4,6 +4,7 @@ $margin: 10px;
 $app_title_color: #9a9a9c;
 $background_color: white;
 
+// $header_height: 50px;
 $header_height: 48px;
 
 $menu_background_color: #efeff0;
