--- a/app/assets/stylesheets/master.sass
+++ b/app/assets/stylesheets/master.sass
@@ -4,6 +4,7 @@ $secondary-color: color("blue", "base") !default
 @import 'materialize'
 @import 'material_icons'
 
+// @import 'SlickGrid/*'
 @import 'lib/*'
 @import 'lib/SlickGrid/*'
 @import 'overrides/*'
