--- a/app/assets/stylesheets/grid_form.scss
+++ b/app/assets/stylesheets/grid_form.scss
@@ -1,29 +1,31 @@
 @import "base";
 
-.create_form {
-  .title {
-    padding-top: 1em;
-    padding-bottom: 1em;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-  .field {
-    margin: 0;
-    .chzn-container {
-      top: 2.5rem;
-      margin-bottom: 1rem;
+.modal-content {
+  .create_form {
+    .title {
+      padding-top: 1em;
+      padding-bottom: 1em;
+      margin-top: 0;
+      margin-bottom: 0;
     }
-    input[type=text]:not(.browser-default) {
-      margin-bottom: 0.5rem;
+    .field {
+      margin: 0;
+      .chzn-container {
+        top: 2.5rem;
+        margin-bottom: 1rem;
+      }
+      input[type=text]:not(.browser-default) {
+        margin-bottom: 0.5rem;
+      }
     }
-  }
-  .submit {
-    float: right;
-    padding: 3em 0;
+    .submit {
+      float: right;
+      padding: 3em 0;
+    }
   }
 }
 
-.attach-modal {
+.attach-modal.modal.modal-fixed-footer {
   .slick-header-column.input-field label {
     top: 15px;
   }
