--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -384,3 +384,75 @@ $themes: (
 .slick-viewport {
   background-color: white;
 }
+
+// Grid Column Picker (Right click on Grid Column Header)
+
+.wulin-columnpicker {
+  li {
+    list-style: none;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+  hr {
+    border-style: inset;
+    border-width: 0.5px;
+    border-color: rgba(247, 246, 239, 0.39);
+  }
+  #reset_to_default {
+    padding-left: 12px;
+    padding-right: 12px;
+    color: gray;
+    span {
+      float: right;
+      padding-right: 12px;
+      font-size: 12px;
+      padding-top: 4px;
+    }
+  }
+}
+
+.columnpicker-container {
+  .card-panel {
+    padding: 0;
+  }
+}
+
+.column-container {
+  padding-top: 10px;
+}
+
+// Grid State Switcher
+
+.grid-states-switcher {
+  float: left;
+  margin-left: 30px;
+  padding-top: 10px;
+  .btn {
+    text-transform: none;
+    text-align: left;
+    color: grey;
+    width: 13rem;
+    font-size: 1rem;
+    padding: 0 1rem 0 1.1rem;
+    span {
+      padding-left: 0;
+    }
+  }
+  .dropdown-content {
+    width: 13rem;
+    li > a {
+      color: grey;
+      font-size: 1rem;
+      display: inline-block;
+      padding-right: 0.1rem;
+      i {
+        font-size: 1.2rem;
+        margin-right: 0.5rem;
+      }
+    }
+  }
+}
+
+.grid-states-modal {
+  width: 35rem;
+}
