--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,5 +1,20 @@
 @import "base";
 
+form {
+  .field_error {
+    color: red;
+    font-size: 11px;
+    display: inline-block;
+    margin-left: 5px;
+    max-width: 85px;
+  }
+  .base_error {
+    padding-left: 130px;
+    line-height: 30px;
+    color: red;
+  }
+}
+
 .create_form {
   .title {
     padding-top: 1em;
