--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1,4 +1,5 @@
 @import "mixins";
+@import 'materialize/components/color';
 
 $margin: 10px;
 $app_title_color: #9a9a9c;
@@ -14,3 +15,6 @@ $menu_item_active_background: #4f81c8;
 $menu_item_active_text: white;
 
 $default_text_color: #333333;
+
+$filter_green: color('green', 'base');
+$grid_border_color: color('grey', 'lighten-2');
