REFACTOR #70955 - Optimize grid.column.header.scss

--- a/app/assets/stylesheets/color.theme.scss
+++ b/app/assets/stylesheets/color.theme.scss
@@ -91,14 +91,16 @@ $bg_colors: (
     }
     .slick-header {
       background: rgba($color, .1);
-    }
-    .slick-header-column {
-      background: none;
-      .slick-drag-indicator,.slick-resizable-handle {
-        background: rgba($color, .0);
-      }
-      i.material-icons {
-        background: rgba($color, .0);
+      .slick-header-column {
+        background: none;
+        &.input-field {
+          .slick-sort-indicator, .slick-drag-indicator, .slick-resizable-handle {
+            background: rgba($color, .0);
+            i.material-icons {
+              background: rgba($color, .0);
+            }
+          }
+        }
       }
     }
     .slick-pager {
