--- a/app/assets/stylesheets/grid.header.scss
+++ b/app/assets/stylesheets/grid.header.scss
@@ -8,6 +8,7 @@
   &.multi-selected {
     background-color: color('blue', 'lighten-5');
   }
+  // Grid Title
   h2 {
     margin-top: 7px;
     padding-top: $margin;
@@ -17,12 +18,46 @@
     color: #555555;
     float: left;
   }
+  // Selection Info
   .selection-info {
     position: absolute;
     display: block;
     padding-left: 20px;
     font-size: 12px;
     color: #039be5;
+  }
+  // Grid State Switcher
+  .grid-states-switcher {
+    float: left;
+    margin-left: 30px;
+    padding-top: 10px;
+    .btn {
+      text-transform: none;
+      text-align: left;
+      color: grey;
+      width: 13rem;
+      font-size: 1rem;
+      padding: 0 1rem 0 1.1rem;
+      span {
+        padding-left: 0;
+      }
+    }
+    .dropdown-content {
+      width: 13rem;
+      li > a {
+        color: grey;
+        font-size: 1rem;
+        display: inline-block;
+        padding-right: 0.1rem;
+        i {
+          font-size: 1.2rem;
+          margin-right: 0.5rem;
+        }
+      }
+    }
+  }
+  .grid-states-modal {
+    width: 35rem;
   }
   .toolbar-wrapper {
     padding: 20px 20px 0 50px;
