--- a/app/assets/stylesheets/grid.row.cell.scss
+++ b/app/assets/stylesheets/grid.row.cell.scss
@@ -1,10 +1,6 @@
 @import 'base';
 
-/* Grid Container */
-
-.grid_container {
-  float: left;
-}
+/* Grid Cell */
 
 .slick-cell {
   font-size: 12px;
@@ -121,113 +117,4 @@
 
 .cell-effort-driven {
   text-align: center;
-}
-
-.grid-canvas {
-  background: white;
-  border-top: 1px solid $grid_border_color;
-  .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
-    color: white;
-  }
-}
-
-.grid {
-  box-shadow: 0px 1px 1px $grid_border_color;
-}
-
-/* Page styling */
-.pager, .slick-pager {
-  border: 0;
-  background: white;
-  font-size: 12px;
-  .slick-pager-status.with-filter, .slick-pager-clear-filter {
-    color: $filter_green;
-    display: inline-block;
-    .material-icons {
-      font-size: 16px;
-      padding-top: 1px;
-    }
-    span {
-      float: right;
-    }
-  }
-  .slick-pager-clear-filter {
-    padding: 6px 15px 6px;
-  }
-}
-
-.slick-viewport {
-  background-color: white;
-}
-
-// Grid Column Picker (Right click on Grid Column Header)
-
-.wulin-columnpicker {
-  li {
-    list-style: none;
-    padding-left: 12px;
-    padding-right: 12px;
-  }
-  hr {
-    border-style: inset;
-    border-width: 0.5px;
-    border-color: rgba(247, 246, 239, 0.39);
-  }
-  #reset_to_default {
-    padding-left: 12px;
-    padding-right: 12px;
-    color: gray;
-    span {
-      float: right;
-      padding-right: 12px;
-      font-size: 12px;
-      padding-top: 4px;
-    }
-  }
-}
-
-.columnpicker-container {
-  .card-panel {
-    padding: 0;
-  }
-}
-
-.column-container {
-  padding-top: 10px;
-}
-
-// Grid State Switcher
-
-.grid-states-switcher {
-  float: left;
-  margin-left: 30px;
-  padding-top: 10px;
-  .btn {
-    text-transform: none;
-    text-align: left;
-    color: grey;
-    width: 13rem;
-    font-size: 1rem;
-    padding: 0 1rem 0 1.1rem;
-    span {
-      padding-left: 0;
-    }
-  }
-  .dropdown-content {
-    width: 13rem;
-    li > a {
-      color: grey;
-      font-size: 1rem;
-      display: inline-block;
-      padding-right: 0.1rem;
-      i {
-        font-size: 1.2rem;
-        margin-right: 0.5rem;
-      }
-    }
-  }
-}
-
-.grid-states-modal {
-  width: 35rem;
 }
