--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -56,3 +56,10 @@ $grid-textarea-height: 80px;
 $grid-textarea-padding: 5px;
 $grid-textarea-bg-color: white;
 $grid-textarea-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+// Form
+
+$error-color: color('red', 'base');
+$error-max-width: 85px;
+$form-title-padding: 16px;
+$form-submit-padding: 24px;
