REFACTOR #70955 - Using variables for grid.columnpicker.scss

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -63,3 +63,9 @@ $error-color: color('red', 'base');
 $error-max-width: 85px;
 $form-title-padding: 16px;
 $form-submit-padding: 24px;
+
+// Grid Column Picker
+
+$columnpicker-li-padding: 12px;
+$columnpicker-color: color('grey', 'base');
+$columnpicker-divider-color: color('grey', 'lighten-2');
