--- a/app/assets/stylesheets/grid.columnpicker.scss
+++ b/app/assets/stylesheets/grid.columnpicker.scss
@@ -15,22 +15,23 @@
 .wulin-columnpicker {
   li {
     list-style: none;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: $columnpicker-li-padding;
+    padding-right: $columnpicker-li-padding;
   }
   hr {
     border-style: inset;
     border-width: 0.5px;
-    border-color: rgba(247, 246, 239, 0.39);
+    border-color: $columnpicker-divider-color;
+    opacity: 0.2;
   }
   #reset_to_default {
-    padding-left: 12px;
-    padding-right: 12px;
-    color: gray;
+    padding-left: $columnpicker-li-padding;
+    padding-right: $columnpicker-li-padding;
+    color: $columnpicker-color;
     span {
       float: right;
-      padding-right: 12px;
-      font-size: 12px;
+      padding-right: $columnpicker-li-padding;
+      font-size: $font-size-small;
       padding-top: 4px;
     }
   }
