--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -68,7 +68,7 @@ body {
 .modal.info-modal {
   width: $info-modal-width;
   .modal-title {
-    font-size: $font-size-big;
+    font-size: $font-size-large;
   }
   .modal-message {
     font-size: $font-size-middle;
